# gmm

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  colcon.pkg
cmake/: FindMATLAB.cmake  gmmConfig.cmake
include/gmm/: GMM.h  GMM2.h  GMM3.h  GMM4.h  GMMNBase.h  KInit.h  KMeans.h  KMeansElkan.h  SKLearn.h
matlab/: GMM3.m  GMM4.m
matlab/src/: gmm3_mex.cc  gmm4_mex.cc
